Update README.md
add install on macOS